fix reset button arrow not centered in some os

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -231,14 +231,13 @@ button {
 
 .actions button {
     user-select: none;
+    vertical-align: middle;
 
-    /*Draw the button background*/
     background-color: var(--box-color);
     border: 1px solid var(--box-color);
     padding: 0.2rem 0;
     border-radius: 1.5rem;
 
-    /*Draw the text*/
     color: var(--text-color);
     font-size: 2.5rem;
 }
